# authclear-priorauth-copilot

./: .env.bedrock.example  .env.example  .gitignore  BUGS_FIXED.md  CLAUDE.md  COMANDOS_REALES.md  COMPLIANCE_FIXES_COMPLETE.md  CURRENT_STATUS.md  DEMO_COMMANDS.md  DEPLOY_CHECKLIST.md  DEVPOST_COMPLIANCE_CHECKLIST.md  Dockerfile.agent  Dockerfile.mcp  ESTADO_ACTUAL.md  FILES_MODIFIED.md  FINAL_STATUS.md  GITHUB_REPO_SETUP.md  GUIA_RAPIDA_GRABACION.md  HARDCODED_DATA_EXPANSION.md  HONEST_STATUS_REPORT.md  HORA_4-6_VIDEO_COMPLETE.md  HOUR_3-4_COMPLETE.md  LICENSE  MARKET_RESEARCH.md  NEXT_STEPS.md  OBS_SETUP_GUIDE.md  PROMPT_OPINION_GUIDE.md  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_ENV_VARS.md  README.md  README_DOCUMENTATION.md  SESSION_SUMMARY.md  SYNTHETIC_PATIENTS.md  TESTING_STATUS.md  VIDEO_DELIVERABLES.md  VIDEO_PLAN_FINAL.md  VIDEO_PRODUCTION_CHECKLIST.md  VIDEO_SCENES_UPDATED.md  VIDEO_SCRIPT_3MIN.md  WEB_UI_README.md  (+28 more)
.claude/: settings.local.json
a2a_agent/: agent_card.py  claude_client.py  config.py  main.py  models.py  orchestrator.py  task_handler.py  task_store.py
a2a_agent/prompts/: __init__.py  prior_auth.py  system.py
a2a_agent/tests/: conftest.py  test_fhir_reader.py  test_task_handler.py
a2a_agent/tools/: __init__.py  fhir_reader.py  mcp_client.py
mcp_server/: cache.py  config.py  http_client.py  models.py  server.py
mcp_server/data/criteria/: aetna.yaml  bcbs.yaml  generic.yaml  medicaid.yaml  medicare.yaml  united.yaml
mcp_server/tests/: test_rxnorm.py
mcp_server/tools/: __init__.py  icd10.py  loinc.py  prior_auth.py  rxnorm.py
shared/fhir/synthetic_patients/: patient_breast_cancer.json  patient_cardiac_eliquis.json  patient_copd_severe.json  patient_lupus_sle.json  patient_nuevo.json  patient_obesity_ozempic.json  patient_rheumatoid_humira.json  patient_t2dm_complete.json  patient_t2dm_gaps.json
shared/models/: __init__.py  patient.py  prior_auth.py
video_assets/: architecture_diagram.html  architecture_interactive.html  architecture_responsive.html  compliance_badges.html  compliance_roi_combined.html  demo_flow_animated.html  demo_flow_responsive.html  roi_calculator.html  title_card.html  title_card_final.html
web_ui/: app.js  index.html
